Just have fun with Virtual Threads (P. Loom) and set the executor as whatever you want